# cmake-fedora

./: .gitignore  CMakeLists.txt  ChangeLog  ChangeLog.prev  README  RELEASE-NOTES.txt  TODO  cmake-fedora.conf  cmake-fedora.conf.in
Modules/: CMakeLists.txt  CMakeVersion.cmake  CmakeFedoraScript.cmake  CmakeVersion.cmake  CompileEnv.cmake  DateTimeFormat.cmake  ManageAPIDoc.cmake  ManageArchive.cmake  ManageChangeLogScript.cmake  ManageDependency.cmake  ManageEnvironment.cmake  ManageEnvironmentCommon.cmake  ManageFile.cmake  ManageFileScript.cmake  ManageGConf.cmake  ManageGettextScript.cmake  ManageGitScript.cmake  ManageMaintainerTargets.cmake  ManageMessage.cmake  ManageRPM.cmake  ManageRPMScript.cmake  ManageRelease.cmake  ManageReleaseFedora.cmake  ManageReleaseOnFedora.cmake  ManageSourceVersionControl.cmake  ManageString.cmake  ManageTarget.cmake  ManageTranslation.cmake  ManageUpload.cmake  ManageVariable.cmake  ManageVersion.cmake  ManageZanata.cmake  ManageZanataDefinition.cmake  ManageZanataScript.cmake  ManageZanataSuggest.cmake  PackRPM.cmake  PackSource.cmake  UseDoxygen.cmake  UseFedpkg.cmake  UseHostingService.cmake  (+1 more)
SPECS/: RPM-ChangeLog.prev  project.spec.in
Templates/: CMakeLists.txt
Templates/fedora/: CMakeLists.txt.template  MAINTAINER_SETTING.template  RELEASE-NOTES.txt.template  project.spec.in  project.spec.in.template
scripts/: CMakeLists.txt  cmake-fedora-changelog  cmake-fedora-fedpkg  cmake-fedora-functions  cmake-fedora-koji  cmake-fedora-newprj  cmake-fedora-newprj.sh  cmake-fedora-pkgdb  cmake-fedora-zanata  koji-build-scratch  koji-build-scratch.in  koji-build-scratch.sh  koji-build-scratch.sh.in
src/: CmakeVersion.cmake  CompileFlags.cmake  ManageString.cmake  ManageVariable.cmake  ManageVersion.cmake  PackRPM.cmake  PackSource.cmake  UseHostingService.cmake
test/: sample-setting.txt  sample-setting2.txt  testCmakeFedoraKoji.cmake  testCmakeFedoraNewprj.cmake  testCmakeFedoraScript.cmake  testCommon.cmake  testManageFile.cmake  testManageFileScript.cmake  testManageString.cmake  testManageTranslation.cmake  testManageVariable.cmake  testManageZanata.cmake  testProjects.cmake
